fix(table): table cell align

--- a/src/components/table/table-cell/table-cell.scss
+++ b/src/components/table/table-cell/table-cell.scss
@@ -3,6 +3,7 @@
   padding: 0 8px;
   font-family: $font-family;
   font-size: 14px;
+  vertical-align: middle;
 }
 .cell {
   display: flex;
